--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
+@font-face {
+    font-family: mortal-kombat-1;
+    src: url(../src/fonts/mk1.ttf);
+}
+@font-face {
+    font-family: mortal-kombat-2;
+    src: url(../src/fonts/mk2.ttf);
+}
+@font-face {
+    font-family: mortal-kombat-4;
+    src: url(../src/fonts/MK4.TTF);
+}
+
 .popUp{
    display: block;
    margin:0 auto;
