--- a/css/juego.css
+++ b/css/juego.css
@@ -4,9 +4,33 @@ body{
     background-repeat: no-repeat;
     width: 100%;
 }
- @media (min-width: 320px) {
 
- }  
+div.live-bars-container{
+    display: flex;
+    width: 90%;
+    height: 5%;
+    margin: auto;
+    justify-content: space-between;
+}
+div.life-bar{
+    width: 30%;
+    background-color: #000000;
+    border-radius: 100px;
+    border: 1px solid #ffffff;
+    box-sizing: border-box;
+}
+div.life-bar-filling{
+    height: 100%;
+    width: 100%;
+    background-color: #C80000;
+    border-radius: 100px;
+}
+
+@media (min-width: 320px) {
+body{
+    height: 80vh;
+}
+}  
 @media (min-width: 768px) {
 
 }  
