--- a/css/style.css
+++ b/css/style.css
@@ -51,3 +51,51 @@
     background-color: transparent;
 }
 
+.body-final{
+    background-image: url(/src/images/mortal-kombat.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: 700px;
+}
+
+.title-final{
+    font-family: 'mortal-kombat-1';
+    font-weight: 400;
+    font-size: 65px;
+    text-align: center;
+    color: #F27405;
+    margin-top: 150px;
+}
+.final-div{
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+.text-eliminados{
+    width: 270px;
+    height: 70px;
+    margin: 0 auto;
+    border-radius: 5px;
+    font-family: 'mortal-kombat-4';
+    font-weight: 400;
+    font-size: 40px;
+    color: #FFF;
+    border: 5px solid #FFF;
+    margin-top: 230px;
+    margin-bottom: 30px;
+}
+
+.button-playagain{
+    width: 240px;
+    height: 55px;
+    margin: 0 auto;
+    border-radius: 4px;
+    background-color: transparent;
+    color: #FFF;
+    border: 3px solid #FFF;
+    font-family: 'mortal-kombat-4';
+    font-weight: 400;
+    font-size: 23px;
+
+}
+
