--- a/css/style.css
+++ b/css/style.css
@@ -42,13 +42,15 @@
 }
 
 .button-popUp{
-    width: 70px;
-    height: 35px;
+    width: 75px;
+    height: 30px;
     display: block;
     margin: 0 auto;
     border: solid #000000 3px;
     border-radius: 4px;
     background-color: transparent;
+    font-family: "mortal-kombat-4";
+    font-size: 18px;
 }
 
 .body-final{
