--- a/estilos.css
+++ b/estilos.css
@@ -50,3 +50,16 @@
         background-position-x: -828px;
     }
 }
+
+@media (min-width: 320px) {
+
+}
+@media (min-width: 640px) {
+
+}
+@media (min-width: 1025px) {
+
+}
+@media (min-width: 1280px) {
+    
+}
