--- a/css/juego.css
+++ b/css/juego.css
@@ -4,6 +4,20 @@ body{
     background-repeat: no-repeat;
     width: 100%;
 }
+.player-names{
+    display: flex;
+
+    margin: auto;
+    width: 90%;
+}
+.player-names h2{
+    color: #ffffff;
+    display: inline-block;
+    width: 50%;
+    text-align: center;
+
+}
+
 
 div.live-bars-container{
     display: flex;
@@ -27,9 +41,9 @@ div.life-bar-filling{
 }
 
 @media (min-width: 320px) {
-body{
-    height: 80vh;
-}
+    body{
+        height: 80vh;
+    }
 }  
 @media (min-width: 640px) {
 
@@ -38,5 +52,5 @@ body{
 
 }  
 @media (min-width: 1280px) {
-    
+
 }
