--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,8 @@ h1 {
     font-family: 'mortalK3';
     font-size: 18px;
     margin-bottom: 50px;
+    background: rgba(27, 26, 26, 0.8);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 #list #nombres{
@@ -70,6 +72,8 @@ h1 {
     height: 42px;
     border-radius: 5px;
     font-family: 'mortalK3';
+    background: rgba(27, 26, 26, 0.8);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 #play {
@@ -135,5 +139,43 @@ h1 {
     }
     #play button{
         width: 210px;
+    }
+}
+@media (min-width: 1025px){
+    h1{
+        display: block;
+        font-size: 60px;
+    }
+    h3{
+        display: block;
+    }
+    #field{
+        margin-left: 15%;
+        height: 60vh;
+        width: 70vw;
+        margin-top: 0px;
+    }
+    #add #nombre{
+        width: 600px;
+        height: 50px;
+        margin-bottom: 50px;
+        margin-top: 20px;
+    }
+    #list #nombres{
+        width: 600px;
+        height: 50px;
+        margin-bottom: -10px;
+    }
+    #play{
+        text-align: center;
+        margin-left: 0;
+        margin-top: 50px;
+    }
+    #list button{
+        margin-left: 30px;
+        font-size: 50px;
+    }
+    #add button{
+        margin-left: 20px;
     }
 }
