--- a/css/juego.css
+++ b/css/juego.css
@@ -1,30 +1,20 @@
 body{
-    background-image: url(../src/images/land.png);
+    background-image: url(../src/images/LandMobile.png);
     background-size: cover;
     background-repeat: no-repeat;
-    width: 100%;
+    height: 100vh;
 }
 .player-names{
     display: flex;
-
-    margin: auto;
-    width: 90%;
+    justify-content: space-around;
 }
 .player-names h2{
     color: #ffffff;
-    display: inline-block;
-    width: 50%;
-    text-align: center;
-
 }
-
 
 div.live-bars-container{
     display: flex;
-    width: 90%;
-    height: 5%;
-    margin: auto;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 div.life-bar{
     width: 30%;
@@ -32,6 +22,7 @@ div.life-bar{
     border-radius: 100px;
     border: 1px solid #ffffff;
     box-sizing: border-box;
+    height: 20px;
 }
 div.life-bar-filling{
     height: 100%;
@@ -43,21 +34,43 @@ div.life-bar-filling{
 /* Counter style */
 .counter{
     color: white;
-    margin: 50%;
+    margin: 46%;
     font-size: 347%;
+}
+.containerCounter{
+    text-align: center;
 }
 
 @media (min-width: 320px) {
-    body{
-        height: 80vh;
+    .counter{
+        font-size: 194%;
+    }
+    .player-names h2{
+        font-size: 14px;
     }
 }  
+
 @media (min-width: 640px) {
-
+    .counter{
+        font-size: 266%;
+    }
+    .player-names h2{
+        font-size: 20px;
+    }
 }  
+
 @media (min-width: 1025px) {
-
+    .counter{
+        font-size: 422%;
+    }
+    .player-names h2{
+        font-size: 30px;
+    }
 }  
+
 @media (min-width: 1280px) {
+    .counter{
+        font-size: 500%;
+    }
 }
 
