--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@ h1 {
     margin-bottom: 50px;
     background: rgba(27, 26, 26, 0.8);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    color: white;
 }
 
 #list #nombres{
@@ -74,6 +75,8 @@ h1 {
     font-family: 'mortalK3';
     background: rgba(27, 26, 26, 0.8);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    color: white;
+    font-size: 33px;
 }
 
 #play {
@@ -82,9 +85,13 @@ h1 {
     text-align: center;
 }
 
+a{
+    color: #F27405;
+    text-decoration: none;
+}
+
 #play button{
     width: 150px;
-    height: 45px;
     background-color: transparent;
     color: #F27405;
     font-family: 'mortalK3';
@@ -207,9 +214,7 @@ h1 {
         margin-bottom: 10px;
     }
     #play button{
-        width: 400px;
-        height: 60px;
-        font-size: 50px;
+        font-size: 55px;
     }
     #list{
         height: 40vh;
