--- a/css/juego.css
+++ b/css/juego.css
@@ -45,6 +45,23 @@ div.life-bar-filling{
     background-color: #C80000;
     border-radius: 100px;
 }
+.life-bar:nth-child(2) .life-bar-filling{
+    animation: life 4s forwards;
+}
+@keyframes life{
+    0%{
+        width: 100%;
+    }
+    30%{
+        width: 70%;
+    }
+    60%{
+        width: 50%;
+    }
+    100%{
+        width: 20%;
+    }
+}
 
 /* Counter style */
 .counter{
