--- a/estilos.css
+++ b/estilos.css
@@ -1,10 +1,10 @@
 .pelea{
     height: 200px;
     width: 126px;
-    /*transform: scaleX(-1);*/
     background-image: url('img/golpes.png');
     background-repeat: no-repeat;
-    animation: golpe 1s steps(9) paused;    
+    animation: golpe 1s steps(9) paused;
+    display: none;    
 }
 
 @keyframes golpe{
