--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,28 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     overflow-x: hidden !important;
 }
-body{
+
+body {
     background-image: url(/src/images/Background1.jfif);
     background-repeat: no-repeat;
-    background-size:cover;
+    background-size: cover;
     background-position: center;
     height: 100vh;
 }
 
-@font-face{
+@font-face {
     font-family: mortalK1;
     src: url(/css/mk1.ttf);
 }
-@font-face{
+
+@font-face {
     font-family: mortalK2;
     src: url(/css/mk2.ttf);
 }
-@font-face{
+
+@font-face {
     font-family: mortalK3;
     src: url(/css//MK4.TTF);
 }
@@ -32,13 +35,13 @@ h1 {
     color: #F27405;
 }
 
-#formulario{
+#formulario {
     margin-left: 10px;
     margin-right: 10px;
     margin-top: 25px;
 }
 
-#formulario h3{
+#formulario h3 {
     text-align: center;
     font-family: 'mortalK3';
     font-size: 30px;
@@ -46,13 +49,13 @@ h1 {
     -webkit-text-stroke: 0.2px black;
 }
 
-#field{
+#field {
     background: rgba(184, 184, 184, 0.4);
     margin-top: 25px;
     border-radius: 20px;
 }
 
-#add #nombre{
+#add #nombre {
     margin-top: 28px;
     width: 230px;
     height: 42px;
@@ -65,7 +68,7 @@ h1 {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-#list #nombres{
+#list #nombres {
     margin-left: 20px;
     margin-bottom: 14px;
     width: 230px;
@@ -82,7 +85,7 @@ h1 {
     text-align: center;
 }
 
-#play button{
+#play button {
     width: 150px;
     height: 45px;
     background-color: transparent;
@@ -92,129 +95,177 @@ h1 {
     border-radius: 5px;
     border: 4px solid white;
 }
-
-#list button{
+#list button {
     margin-left: 7px;
     background-color: transparent;
     border: none;
     font-size: 40px;
 }
-#add button{
+
+#add button {
     background-color: transparent;
     border: none;
     font-size: 40px;
-} 
+}
 
-@media (min-width: 640px){
-    h1{
+@media (min-width: 480px) {
+    body{
+        overflow-y: hidden;
+    }
+    h1 {
         display: none;
     }
     h3 {
         display: none;
-        
     }
-    #field{
+    #formulario{
+        height: 100vh;
+        background-image: url(/img/detenido.gif);
+        background-position: 68vw 10vh;
+        background-repeat: no-repeat;
+        background-size: 7em;
+    }
+    #field {
         width: 60vw;
         height: 80vh;
     }
-    #add #nombre{
-        width: 280px;
-        height: 38px;
+    #add #nombre {
+        width: 210px;
+        height: 30px;
         margin-top: 0px;
-        margin-bottom: 10px;
+        margin-bottom: 20px;
     }
-    #add button{
-        margin-left: 10px;
-        margin-top: 0px;
+
+    #add button {
+        margin-left: 5px;
+        font-size: 30px;
     }
-    #list #nombres{
-        width: 280px;
-        height: 38px;
+
+    #list #nombres {
+        width: 210px;
+        height: 30px;
         margin-bottom: 0px;
     }
-    
+
     #play {
-        margin-left: 200px;
-        margin-top: -50px;
+        margin-left: 150px;
+        margin-top: -30px;
     }
-    #play button{
-        width: 210px;
+
+    #play button {
+        width: 140px;
+        height: 30px;
+        font-size: 20px;
+        overflow-y: hidden !important;
     }
 }
-@media (min-width: 1025px){
-    h1{
+
+@media (min-width: 768px) {
+    h1 {
         display: block;
         font-size: 60px;
     }
-    h3{
+    #formulario{
+        background-image: none;
+    }
+    h3 {
         display: block;
         font-size: larger;
     }
-    #list{
+
+    #list {
         height: 40vh;
     }
-    #field{
+
+    #field {
         margin-left: 15%;
         height: 60vh;
         width: 70vw;
         margin-top: 0px;
     }
-    #add #nombre{
-        width: 600px;
+
+    #add #nombre {
+        width: 430px;
         height: 50px;
         margin-bottom: 50px;
         margin-top: 20px;
     }
-    #list #nombres{
-        width: 600px;
+
+    #list #nombres {
+        width: 430px;
         height: 50px;
         margin-bottom: -10px;
     }
-    #play{
+
+    #play {
         text-align: center;
         margin-left: 0;
         margin-top: 50px;
     }
-    #list button{
+
+    #list button {
         margin-left: 30px;
         font-size: 50px;
     }
-    #add button{
+
+    #add button {
         margin-left: 20px;
     }
-}
-@media (min-width: 1280px){
-    #field{
-        width: 60vw;
-        height: 65vh;
-        text-align: center;
-        margin-left: 18%;
+    #play button{
+        width: 250px;
+        height: 45px;
+        font-size: 35px;
+        overflow-y: hidden;
     }
-    h1{
+}
+
+@media (min-width: 1024px) {
+    #field {
+        width: 70vw;
+        height: 50vh;
+        margin-left: 13%;
+    }
+
+    h1 {
         font-size: 80px;
     }
-    #formulario h3{
+
+    #formulario h3 {
         font-size: 50px;
-    } 
-    #add #nombre{
+    }
+
+    #add #nombre {
+        width: 600px;
         margin-top: 50px;
         height: 60px;
         font-size: 30px;
         margin-bottom: 90px;
     }
-    #list #nombres{
+
+    #list #nombres {
+        width: 600px;
         height: 60px;
         margin-bottom: 10px;
     }
-    #play button{
+
+    #play button {
         width: 400px;
         height: 60px;
         font-size: 50px;
     }
+
     #list{
-        height: 40vh;
+        height: 18vh;
     }
-    
+}
+@media (min-width: 1200px){
+    #add #nombre{
+        width: 730px;
+        margin-bottom: 70px;
+    }
+    #list #nombres{
+        width: 730px;
+    }
 }
 @font-face {
     font-family: mortal-kombat-1;
