--- a/estilos.css
+++ b/estilos.css
@@ -60,16 +60,17 @@
 }
 
 .detenido{
-    height: 140px;
-    width: 77px;
+    height: 370px;
+    width: 200px;
     background-image: url('img/detenido.gif');
+    background-size: 100%;
 }
 
 .victima{
-    height: 200px;
-    width: 90px;
+    height: 370px;
+    width: 230px;
     transform: scaleX(-1);
-    background-image: url('img/victima1.png');
+    background-image: url('img/victima1(720).png');
     background-repeat: no-repeat;
     animation: golpiza .5s steps(4) 2;
     display: none;      
@@ -80,7 +81,7 @@
         background-position-x: 0;
     }
     100%{
-        background-position-x: -380px;        
+        background-position-x: -1019px;        
     }
 }
 
