--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,21 @@ body {
     background-position: center;
     height: 100vh;
 }
+ul li{
+    color: rgb(192, 192, 192);
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    font-size: 25px;
+    height: 35px;
+}
 
+li button{
+    color: red;
+    font-size: 10px;
+    transform: scale(0.5);
+    margin-top: -15px;
+}
 @font-face {
     font-family: mortalK1;
     src: url(./mk1.ttf);
@@ -51,6 +65,7 @@ h1 {
     border-radius: 20px;
 }
 #add #nombre {
+    color: white;
     margin-top: 28px;
     width: 230px;
     height: 42px;
@@ -66,7 +81,7 @@ h1 {
     margin-left: 20px;
     margin-bottom: 14px;
     width: 230px;
-    height: 42px;
+    height: 542px;
     border-radius: 5px;
     font-family: 'mortalK3';
     background: rgba(27, 26, 26, 0.8);
@@ -143,7 +158,7 @@ h1 {
 
     #list #nombres {
         width: 210px;
-        height: 30px;
+        height: 330px;
         margin-bottom: 0px;
     }
 
@@ -195,7 +210,7 @@ h1 {
 
     #list #nombres {
         width: 430px;
-        height: 50px;
+        height: 350px;
         margin-bottom: -10px;
     }
 
@@ -247,7 +262,7 @@ h1 {
 
     #list #nombres {
         width: 600px;
-        height: 60px;
+        height: 135px;
         margin-bottom: 10px;
     }
 
