--- a/estilos.css
+++ b/estilos.css
@@ -56,7 +56,7 @@
     }
     100%{
         background-position-x: -828px;
-        transform: translateX(100%) ;
+        transform: translateX(100%);
         transform: translateX(100%);
     }
 }
@@ -157,7 +157,7 @@
     transform: scaleX(-1);
     background-image: url('img/victima5(720).png');
     background-repeat: no-repeat;
-    animation: muerto 1s steps(7) infinite;
+    animation: muerto 1s steps(7) 1;
 }
 
 @keyframes muerto{
@@ -167,6 +167,13 @@
     100%{
         background-position-x: -2809px;
     }
+}
+
+.victima6{
+    height: 370px;
+    width: 395px;
+    transform: scaleX(-1);
+    background-image: url('img/muerto.gif');
 }
 
 .detenidov{
