--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ h1 {
 #add #nombre {
     color: white;
     margin-top: 28px;
-    width: 230px;
+    width: 200px;
     height: 42px;
     border-radius: 5px;
     margin-left: 20px;
@@ -80,7 +80,7 @@ h1 {
     margin-left: 20px;
     margin-bottom: 14px;
     width: 230px;
-    height: 198px;
+    height: 160px;
     border-radius: 5px;
     font-family: 'mortalK3';
     background: rgba(27, 26, 26, 0.8);
@@ -136,7 +136,7 @@ h1 {
     #formulario {
         height: 100vh;
         background-image: url(/img/detenido.gif);
-        background-position: 68vw 10vh;
+        background-position: 68vw 5vh;
         background-repeat: no-repeat;
         background-size: 7em;
     }
@@ -160,7 +160,7 @@ h1 {
 
     #list #nombres {
         width: 210px;
-        height: 330px;
+        height: 50vh;
         margin-bottom: 0px;
     }
 
@@ -213,7 +213,7 @@ h1 {
 
     #list #nombres {
         width: 430px;
-        height: 183px;
+        height: 383px;
         margin-bottom: -10px;
     }
 
@@ -265,7 +265,7 @@ h1 {
 
     #list #nombres {
         width: 600px;
-        height: 135px;
+        height: 70px;
         margin-bottom: 10px;
     }
 
