--- a/css/popup.css
+++ b/css/popup.css
@@ -1,23 +1,25 @@
 .showpopup{
     display: inline-block;
 }
-
+*{
+    margin: 0;
+}
 @media (min-width: 320px) {
     .popUp {
         display: none;
-        margin: 0 auto;
-        width: 330px;
-        margin-top: 55%;
+        position: fixed;
+        top: 10%;
+        left: 10%;
+        width: 80vw;
+        height: 20vh;
         justify-content: center;
         align-items: center;
-        height: 180px;
         background: linear-gradient(281.16deg, rgba(242, 116, 5, 0.9) 2.22%, rgba(149, 1, 7, 0.9) 99.22%);
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         border-radius: 10px;
-        position: absolute;
-        left: 25%;
-        top: 25%;
+        z-index:80;
     }
+    
 
     .img-calavera {
         width: 90px;
@@ -35,17 +37,23 @@
         text-align: center;
         margin-top: 0px;
     }
-
+    .popUp-button-container{
+        margin: auto;
+    }
     .button-popUp {
-        width: 75px;
-        height: 30px;
+        width: 100px;
+        height: 50px;
         display: block;
-        margin: 0 auto;
-        border: solid #000000 3px;
+        margin: auto;
+        border: solid #000000 5px;
         border-radius: 4px;
         background-color: transparent;
         font-family: "mortal-kombat-4";
-        font-size: 18px;
+        font-size: 20px;
+        z-index: 100;
+    }
+    .button-popUp:hover{
+        cursor: pointer;
     }
 }
 
@@ -53,7 +61,8 @@
     .popUp {
         width: 570px;
         height: 270px;
-        margin-top: 25%;
+        margin-top: 0%;
+        left: 15%;
     }
 
     .img-calavera {
@@ -76,7 +85,8 @@
     .popUp {
         width: 870px;
         height: 370px;
-        margin-top: 15%;
+        margin-top: 0%;
+        left: 12%;
     }
 
     .img-calavera {
@@ -98,6 +108,7 @@
 
 @media (min-width: 1280px) {
     .popUp {
-        margin-top: 14%;
+        margin-top: 5%;
+        left: 15%;
     }
 }
