--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,17 @@ body {
     background-position: center;
     height: 100vh;
 }
+ul{
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
 ul li{
     color: rgb(192, 192, 192);
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
     font-size: 25px;
+    
     height: 35px;
 }
 
@@ -332,7 +337,7 @@ h1 {
         font-family: 'Inter';
         font-style: normal;
         font-weight: 700;
-        font-size: 18px;
+        font-size: 12px;
         text-align: center;
         margin-top: 0px;
     }
@@ -346,7 +351,7 @@ h1 {
         border-radius: 4px;
         background-color: transparent;
         font-family: "mortal-kombat-4";
-        font-size: 18px;
+        font-size: 12px;
     }
 
     .body-final {
@@ -359,7 +364,7 @@ h1 {
     .title-final {
         font-family: 'mortal-kombat-1';
         font-weight: 400;
-        font-size: 60px;
+        font-size: 12px;
         text-align: center;
         color: #F27405;
         margin-top: 120px;
@@ -379,7 +384,7 @@ h1 {
         border-radius: 5px;
         font-family: 'mortal-kombat-4';
         font-weight: 400;
-        font-size: 40px;
+        font-size: 20px;
         color: #FFF;
         border: 5px solid #FFF;
         margin-top: 33px;
@@ -430,8 +435,8 @@ h1 {
 
     .text-eliminados {
         width: 290px;
-        height: 50px;
-        font-size: 40px;
+        height: 60px;
+        font-size: 16px;
     }
 
     .button-playagain {
